@@ -13,12 +13,15 @@ class PIREPAdmin
 			case 'addcomment':
 				$this->AddComment();				
 				break;
+				
+			case 'approvepirep':
+				$this->ApprovePIREP();
+				break;
 		}
 		
 		// Views
 		switch(Vars::GET('admin'))
 		{
-			
 			case 'viewpireps':
 			
 				Template::Set('pireps', PIREPData::GetAllReportsByAccept(0));
@@ -51,8 +54,19 @@ class PIREPAdmin
 		Template::Set('pirepid', $pirepid);
 		
 		$message = Template::GetTemplate('email_commentadded.tpl', true);
-		Util::SendEmail($pirep_details->email, 'Comment Added', $message);
-				
+		Util::SendEmail($pirep_details->email, 'Comment Added', $message);			
+	}
+	
+	function ApprovePIREP()
+	{
+		$pirepid = Vars::POST('id');
+		
+		if($pirepid == '') return;
+			
+		$pirep  = PIREPData::GetReportDetails($pirepid);
+		
+		PIREPData::ChangePIREPStatus($pirepid, '1'); // 1 is accepted
+		PilotData::UpdateFlightData(Auth::$userinfo->pilotid, $pirep->flighttime);	
 	}
 }
 
